gcc/testsuite/rust/rustc/ui/issues/issue-60057.rs
struct A {
    banana: u8,
}

impl A {
    fn new(peach: u8) -> A {
        A {
            banana: banana // { dg-error ".E0425." "" { target *-*-* } }
        }
    }

    fn foo(&self, peach: u8) -> A {
        A {
            banana: banana // { dg-error ".E0425." "" { target *-*-* } }
        }
    }
}

fn main() {}

